<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">


    <CheckBox
        android:id="@+id/settings_doLetterShift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/settingsFrag_letterShiftEnable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/settings_letterShift"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/settingsFrag_hints"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/settings_doLetterShift"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_doLetterShift"
        app:layout_constraintTop_toTopOf="@+id/settings_doLetterShift" />

    <CheckBox
        android:id="@+id/settings_doNumberShift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/settingsFrag_numberShiftEnable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_doLetterShift" />

    <EditText
        android:id="@+id/settings_numberShift"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/settingsFrag_hints"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/settings_doNumberShift"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_doNumberShift"
        app:layout_constraintTop_toTopOf="@+id/settings_doNumberShift" />

    <CheckBox
        android:id="@+id/settings_doCustomShift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/settingsFrag_provideCustomAlphabet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_doNumberShift" />

    <EditText
        android:id="@+id/settings_customShift"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/settingsFrag_hints"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/settings_doCustomShift"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_doCustomShift"
        app:layout_constraintTop_toTopOf="@+id/settings_doCustomShift" />

    <EditText
        android:id="@+id/settings_customAlphabet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/settingsFrag_AlphabetHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_customShift" />

</androidx.constraintlayout.widget.ConstraintLayout>